--- a/TrainingExe1/Exam2/ViewController/Exam2.xib
+++ b/TrainingExe1/Exam2/ViewController/Exam2.xib
@@ -31,7 +31,7 @@
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" usesAttributedText="YES" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ip9-aR-dhe">
-                    <rect key="frame" x="12" y="139.5" width="40" height="19"/>
+                    <rect key="frame" x="12" y="138.5" width="40" height="19"/>
                     <attributedString key="attributedText">
                         <fragment content="Tên ">
                             <attributes>
@@ -48,13 +48,13 @@
                     <nil key="highlightedColor"/>
                 </label>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Đăng ký người dùng" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xum-Tb-9jJ">
-                    <rect key="frame" x="105" y="80" width="165.5" height="22.5"/>
-                    <fontDescription key="fontDescription" name="TimesNewRomanPSMT" family="Times New Roman" pointSize="20"/>
+                    <rect key="frame" x="109" y="80" width="157.5" height="21.5"/>
+                    <fontDescription key="fontDescription" name="TimesNewRomanPSMT" family="Times New Roman" pointSize="19"/>
                     <nil key="textColor"/>
                     <nil key="highlightedColor"/>
                 </label>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" usesAttributedText="YES" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="CcX-JE-5dd">
-                    <rect key="frame" x="12" y="189.5" width="80" height="19"/>
+                    <rect key="frame" x="12" y="188.5" width="80" height="19"/>
                     <attributedString key="attributedText">
                         <fragment content="Tên Kana ">
                             <attributes>
@@ -71,7 +71,7 @@
                     <nil key="highlightedColor"/>
                 </label>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" usesAttributedText="YES" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="GTf-jX-fZh">
-                    <rect key="frame" x="12" y="239.5" width="54" height="19"/>
+                    <rect key="frame" x="12" y="238.5" width="54" height="19"/>
                     <attributedString key="attributedText">
                         <fragment content="Email ">
                             <attributes>
@@ -88,82 +88,82 @@
                     <nil key="highlightedColor"/>
                 </label>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="252" usesAttributedText="YES" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="HVk-WB-lqA">
-                    <rect key="frame" x="12" y="288.5" width="89" height="21"/>
+                    <rect key="frame" x="12" y="288.5" width="82.5" height="19"/>
                     <attributedString key="attributedText">
                         <fragment content="Ngày sinh ">
                             <attributes>
-                                <font key="NSFont" metaFont="system" size="17"/>
+                                <font key="NSFont" size="17" name="TimesNewRomanPSMT"/>
                             </attributes>
                         </fragment>
                         <fragment content="*">
                             <attributes>
                                 <color key="NSColor" red="1" green="0.19939839630935285" blue="0.056247627238436348" alpha="1" colorSpace="calibratedRGB"/>
-                                <font key="NSFont" metaFont="system" size="17"/>
+                                <font key="NSFont" size="17" name="TimesNewRomanPSMT"/>
                             </attributes>
                         </fragment>
                     </attributedString>
                     <nil key="highlightedColor"/>
                 </label>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" usesAttributedText="YES" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sN9-wt-koX">
-                    <rect key="frame" x="12" y="339.5" width="76" height="20.5"/>
+                    <rect key="frame" x="12" y="339.5" width="74.5" height="19"/>
                     <attributedString key="attributedText">
                         <fragment content="Giới tính ">
                             <attributes>
-                                <font key="NSFont" metaFont="system" size="17"/>
+                                <font key="NSFont" size="17" name="TimesNewRomanPSMT"/>
                             </attributes>
                         </fragment>
                         <fragment content="*">
                             <attributes>
                                 <color key="NSColor" red="1" green="0.18226096699420991" blue="0.12846483503361839" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                <font key="NSFont" metaFont="system" size="17"/>
+                                <font key="NSFont" size="17" name="TimesNewRomanPSMT"/>
                             </attributes>
                         </fragment>
                     </attributedString>
                     <nil key="highlightedColor"/>
                 </label>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" usesAttributedText="YES" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Loq-Ti-ue2">
-                    <rect key="frame" x="12" y="388.5" width="45" height="21"/>
+                    <rect key="frame" x="12" y="388.5" width="45" height="19"/>
                     <attributedString key="attributedText">
                         <fragment content="SĐT ">
                             <attributes>
-                                <font key="NSFont" metaFont="system" size="17"/>
+                                <font key="NSFont" size="17" name="TimesNewRomanPSMT"/>
                             </attributes>
                         </fragment>
                         <fragment content="*">
                             <attributes>
                                 <color key="NSColor" red="1" green="0.12768543880314898" blue="0.055784742219644912" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                <font key="NSFont" metaFont="system" size="17"/>
+                                <font key="NSFont" size="17" name="TimesNewRomanPSMT"/>
                             </attributes>
                         </fragment>
                     </attributedString>
                     <nil key="highlightedColor"/>
                 </label>
                 <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="nWm-QL-UFj">
-                    <rect key="frame" x="124" y="133.5" width="110" height="30"/>
+                    <rect key="frame" x="124" y="132.5" width="110" height="30"/>
                     <nil key="textColor"/>
                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
                     <textInputTraits key="textInputTraits"/>
                 </textField>
                 <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="TQ1-Wk-9Xl">
-                    <rect key="frame" x="124" y="183.5" width="110" height="30"/>
+                    <rect key="frame" x="124" y="182.5" width="110" height="30"/>
                     <nil key="textColor"/>
                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
                     <textInputTraits key="textInputTraits"/>
                 </textField>
                 <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="CGc-Lg-cEN">
-                    <rect key="frame" x="249" y="183.5" width="110" height="30"/>
+                    <rect key="frame" x="249" y="182.5" width="110" height="30"/>
                     <nil key="textColor"/>
                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
                     <textInputTraits key="textInputTraits"/>
                 </textField>
                 <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="eS0-gh-z1f">
-                    <rect key="frame" x="124" y="383.5" width="74" height="30"/>
+                    <rect key="frame" x="124" y="382.5" width="74" height="30"/>
                     <nil key="textColor"/>
                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
                     <textInputTraits key="textInputTraits"/>
                 </textField>
                 <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="FZ7-rn-p6g">
-                    <rect key="frame" x="204.5" y="383.5" width="74" height="30"/>
+                    <rect key="frame" x="204.5" y="382.5" width="74" height="30"/>
                     <constraints>
                         <constraint firstAttribute="width" constant="74" id="wSw-pg-8Bk"/>
                     </constraints>
@@ -172,19 +172,19 @@
                     <textInputTraits key="textInputTraits"/>
                 </textField>
                 <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="zWF-fb-IWK">
-                    <rect key="frame" x="124" y="233.5" width="235" height="30"/>
+                    <rect key="frame" x="124" y="232.5" width="235" height="30"/>
                     <nil key="textColor"/>
                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
                     <textInputTraits key="textInputTraits"/>
                 </textField>
                 <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="EUD-qk-287">
-                    <rect key="frame" x="124" y="283.5" width="235" height="30"/>
+                    <rect key="frame" x="124" y="282.5" width="235" height="30"/>
                     <nil key="textColor"/>
                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
                     <textInputTraits key="textInputTraits"/>
                 </textField>
                 <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="xR5-of-CQo">
-                    <rect key="frame" x="249" y="133.5" width="110" height="30"/>
+                    <rect key="frame" x="249" y="132.5" width="110" height="30"/>
                     <constraints>
                         <constraint firstAttribute="width" constant="110" id="r5m-DL-VFW"/>
                     </constraints>
@@ -193,11 +193,12 @@
                     <textInputTraits key="textInputTraits"/>
                 </textField>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="bE6-PF-bif">
-                    <rect key="frame" x="125.5" y="443.5" width="124" height="30"/>
+                    <rect key="frame" x="125.5" y="442.5" width="124" height="31"/>
                     <color key="backgroundColor" red="1" green="0.10730311222355693" blue="0.46387671042381706" alpha="1" colorSpace="calibratedRGB"/>
                     <constraints>
                         <constraint firstAttribute="width" constant="124" id="L9w-EP-tLA"/>
                     </constraints>
+                    <fontDescription key="fontDescription" name="TimesNewRomanPSMT" family="Times New Roman" pointSize="17"/>
                     <state key="normal" title="Đăng Ký">
                         <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </state>
@@ -206,7 +207,7 @@
                     </connections>
                 </button>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ezz-cd-CRx">
-                    <rect key="frame" x="124" y="333.5" width="32" height="32"/>
+                    <rect key="frame" x="124" y="332.5" width="32" height="32"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="32" id="2V0-xj-FwA"/>
                         <constraint firstAttribute="width" constant="32" id="8oR-Km-gZo"/>
@@ -216,7 +217,7 @@
                     </connections>
                 </button>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="r8j-lo-2gj">
-                    <rect key="frame" x="299" y="333.5" width="32" height="32"/>
+                    <rect key="frame" x="299" y="332.5" width="32" height="32"/>
                     <constraints>
                         <constraint firstAttribute="width" constant="32" id="Cmx-no-mlM"/>
                         <constraint firstAttribute="height" constant="32" id="cKe-mc-pTy"/>
@@ -226,19 +227,19 @@
                     </connections>
                 </button>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Nam" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="XOl-gD-Lw5">
-                    <rect key="frame" x="164" y="339" width="36" height="21"/>
-                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                    <rect key="frame" x="164" y="339" width="33.5" height="19"/>
+                    <fontDescription key="fontDescription" name="TimesNewRomanPSMT" family="Times New Roman" pointSize="17"/>
                     <nil key="textColor"/>
                     <nil key="highlightedColor"/>
                 </label>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Nữ" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="pn5-id-Ydu">
-                    <rect key="frame" x="339" y="339" width="23" height="21"/>
-                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                    <rect key="frame" x="339" y="339" width="21.5" height="19"/>
+                    <fontDescription key="fontDescription" name="TimesNewRomanPSMT" family="Times New Roman" pointSize="17"/>
                     <nil key="textColor"/>
                     <nil key="highlightedColor"/>
                 </label>
                 <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="TSK-c3-esc">
-                    <rect key="frame" x="285" y="383.5" width="74" height="30"/>
+                    <rect key="frame" x="285" y="382.5" width="74" height="30"/>
                     <nil key="textColor"/>
                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
                     <textInputTraits key="textInputTraits"/>
